--- a/BookStore/BookStore.Data/BookStore.Data.csproj
+++ b/BookStore/BookStore.Data/BookStore.Data.csproj
@@ -67,6 +67,10 @@
     <Compile Include="Migrations\202204131748132_removeBookInCategory.designer.cs">
       <DependentUpon>202204131748132_removeBookInCategory.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202204140047201_AddPhoneAndEmailForAuthor.cs" />
+    <Compile Include="Migrations\202204140047201_AddPhoneAndEmailForAuthor.designer.cs">
+      <DependentUpon>202204140047201_AddPhoneAndEmailForAuthor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AuthorRepository.cs" />
@@ -98,6 +102,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202204131748132_removeBookInCategory.resx">
       <DependentUpon>202204131748132_removeBookInCategory.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202204140047201_AddPhoneAndEmailForAuthor.resx">
+      <DependentUpon>202204140047201_AddPhoneAndEmailForAuthor.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
