--- a/BookStore/BookStore.Service/BookStore.Service.csproj
+++ b/BookStore/BookStore.Service/BookStore.Service.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IMainHandler.cs" />
+    <Compile Include="MainHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AuthorService.cs" />
     <Compile Include="Services\BookService.cs" />
@@ -60,6 +62,10 @@
     <ProjectReference Include="..\BookStore.Model\BookStore.Model.csproj">
       <Project>{6814ec61-dd22-4c22-ab50-073eb0d4dd7d}</Project>
       <Name>BookStore.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BookStore.Shared\BookStore.Shared.csproj">
+      <Project>{112979DD-D4D0-469C-9320-15F415791A7B}</Project>
+      <Name>BookStore.Shared</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
